--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == Joseph Ferrairo
 
-This is my personal static website. I made it using front <a href="https://github.com/MrPowers/frontend-generators" Front end Generators></a>
+This is my personal static website. I made it using [FrontEndGenerators](https://github.com/MrPowers/frontend-generators)
